--- a/donate-crypto/index.html
+++ b/donate-crypto/index.html
@@ -32,7 +32,8 @@
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="mask-icon" href="safari-pinned-tab.svg" color="#26a17b">
 	<meta name="msapplication-TileColor" content="#2b5797">
-	<meta name="theme-color" content="#ffffff">
+	<meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
+	<meta name="theme-color" media="(prefers-color-scheme: dark)" content="black">
 	<title>Donate Crypto</title>
 </head>
 <body>
@@ -55,7 +56,7 @@
 			<span class="rounded_square">
 				<img src="icons/id-bnb-bnb.svg" class="coin_icon" alt="Coin icon">
 			</span>
-			BNB
+			BNB (BEP-20)
 		</button>
 		
 		
@@ -64,7 +65,25 @@
 			<span class="rounded_square">
 				<img src="icons/id-eth-ethereum.svg" class="coin_icon" alt="Coin icon">
 			</span>
-			ETH
+			ETH (ERC-20)
+		</button>
+		
+		
+		
+		<button id="button-id-eth-arbitrum" class="coin_button" type="button">
+			<span class="rounded_square">
+				<img src="icons/id-eth-arbitrum.svg" class="coin_icon" alt="Coin icon">
+			</span>
+			ETH (Arbitrum)
+		</button>
+		
+		
+		
+		<button id="button-id-eth-optimism" class="coin_button" type="button">
+			<span class="rounded_square">
+				<img src="icons/id-eth-optimism.svg" class="coin_icon" alt="Coin icon">
+			</span>
+			ETH (Optimism)
 		</button>
 		
 		
@@ -73,7 +92,7 @@
 			<span class="rounded_square">
 				<img src="icons/id-matic-polygon.svg" class="coin_icon" alt="Coin icon">
 			</span>
-			MATIC
+			MATIC (Polygon)
 		</button>
 		
 		
@@ -82,7 +101,7 @@
 			<span class="rounded_square">
 				<img src="icons/id-sol-solana.svg" class="coin_icon" alt="Coin icon">
 			</span>
-			SOL
+			SOL (Solana)
 		</button>
 		
 		
@@ -112,6 +131,24 @@
 				<img src="icons/id-usdt-ethereum.svg" class="coin_icon" alt="Coin icon">
 			</span>
 			USDT (ERC-20)
+		</button>
+		
+		
+		
+		<button id="button-id-usdt-arbitrum" class="coin_button" type="button">
+			<span class="rounded_square">
+				<img src="icons/id-usdt-arbitrum.svg" class="coin_icon" alt="Coin icon">
+			</span>
+			USDT (Arbitrum)
+		</button>
+		
+		
+		
+		<button id="button-id-usdt-optimism" class="coin_button" type="button">
+			<span class="rounded_square">
+				<img src="icons/id-usdt-optimism.svg" class="coin_icon" alt="Coin icon">
+			</span>
+			USDT (Optimism)
 		</button>
 		
 		
@@ -163,6 +200,24 @@
 		
 		
 		
+		<button id="button-id-usdc-arbitrum" class="coin_button" type="button">
+			<span class="rounded_square">
+				<img src="icons/id-usdc-arbitrum.svg" class="coin_icon" alt="Coin icon">
+			</span>
+			USDC (Arbitrum)
+		</button>
+		
+		
+		
+		<button id="button-id-usdc-optimism" class="coin_button" type="button">
+			<span class="rounded_square">
+				<img src="icons/id-usdc-optimism.svg" class="coin_icon" alt="Coin icon">
+			</span>
+			USDC (Optimism)
+		</button>
+		
+		
+		
 		<button id="button-id-usdc-polygon" class="coin_button" type="button">
 			<span class="rounded_square">
 				<img src="icons/id-usdc-polygon.svg" class="coin_icon" alt="Coin icon">
@@ -183,7 +238,12 @@
 		
 		
 		
-		&nbsp;
+		<button id="button-id-ton-ton" class="coin_button" type="button">
+			<span class="rounded_square">
+				<img src="icons/id-ton-ton.svg" class="coin_icon" alt="Coin icon">
+			</span>
+			TON
+		</button>
 		
 		
 		
@@ -192,15 +252,6 @@
 				<img src="icons/id-xmr-bnb.svg" class="coin_icon" alt="Coin icon">
 			</span>
 			XMR (BEP-20)
-		</button>
-		
-		
-		
-		<button id="button-id-ton-ton" class="coin_button" type="button">
-			<span class="rounded_square">
-				<img src="icons/id-ton-ton.svg" class="coin_icon" alt="Coin icon">
-			</span>
-			TON
 		</button>
 		
 		
@@ -220,6 +271,18 @@
 			</span>
 			LTC
 		</button>
+		
+		
+		
+		<span></span>
+		
+		
+		
+		<span></span>
+		
+		
+		
+		<span></span>
 		
 		
 		
@@ -244,7 +307,7 @@
 		
 		<div class="wallet" id="wallet-id-bnb-bnb">
 			<div class="coin_name">
-				coin: BNB
+				coin: BNB (BEP-20)
 				<br>network: BNB
 			</div>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
@@ -258,8 +321,36 @@
 		
 		<div class="wallet" id="wallet-id-eth-ethereum">
 			<div class="coin_name">
-				coin: ETH
+				coin: ETH (ERC-20)
 				<br>network: Ethereum
+			</div>
+			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
+			<div class="copy_address">
+				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<div class="address_copied">(Copied)</div>
+			</div>
+		</div>
+		
+		
+		
+		<div class="wallet" id="wallet-id-eth-arbitrum">
+			<div class="coin_name">
+				coin: ETH (Arbitrum)
+				<br>network: Arbitrum
+			</div>
+			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
+			<div class="copy_address">
+				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<div class="address_copied">(Copied)</div>
+			</div>
+		</div>
+		
+		
+		
+		<div class="wallet" id="wallet-id-eth-optimism">
+			<div class="coin_name">
+				coin: ETH (Optimism)
+				<br>network: Optimism
 			</div>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
@@ -272,7 +363,7 @@
 		
 		<div class="wallet" id="wallet-id-matic-polygon">
 			<div class="coin_name">
-				coin: MATIC
+				coin: MATIC (Polygon)
 				<br>network: Polygon
 			</div>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
@@ -286,7 +377,7 @@
 		
 		<div class="wallet" id="wallet-id-sol-solana">
 			<div class="coin_name">
-				coin: SOL
+				coin: SOL (Solana)
 				<br>network: Solana
 			</div>
 			<img src="qr/9mdic-dkv59.svg" alt="QR code" class="qrcode">
@@ -332,6 +423,34 @@
 			<div class="coin_name">
 				coin: USDT (ERC-20)
 				<br>network: Ethereum
+			</div>
+			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
+			<div class="copy_address">
+				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<div class="address_copied">(Copied)</div>
+			</div>
+		</div>
+		
+		
+		
+		<div class="wallet" id="wallet-id-usdt-arbitrum">
+			<div class="coin_name">
+				coin: USDT (Arbitrum)
+				<br>network: Arbitrum
+			</div>
+			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
+			<div class="copy_address">
+				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<div class="address_copied">(Copied)</div>
+			</div>
+		</div>
+		
+		
+		
+		<div class="wallet" id="wallet-id-usdt-optimism">
+			<div class="coin_name">
+				coin: USDT (Optimism)
+				<br>network: Optimism
 			</div>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
@@ -414,6 +533,34 @@
 		
 		
 		
+		<div class="wallet" id="wallet-id-usdc-arbitrum">
+			<div class="coin_name">
+				coin: USDC (Arbitrum)
+				<br>network: Arbitrum
+			</div>
+			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
+			<div class="copy_address">
+				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<div class="address_copied">(Copied)</div>
+			</div>
+		</div>
+		
+		
+		
+		<div class="wallet" id="wallet-id-usdc-optimism">
+			<div class="coin_name">
+				coin: USDC (Optimism)
+				<br>network: Optimism
+			</div>
+			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
+			<div class="copy_address">
+				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<div class="address_copied">(Copied)</div>
+			</div>
+		</div>
+		
+		
+		
 		<div class="wallet" id="wallet-id-usdc-polygon">
 			<div class="coin_name">
 				coin: USDC (Polygon)
@@ -444,6 +591,18 @@
 		
 		
 		
+		<div class="wallet" id="wallet-id-ton-ton">
+			<div class="coin_name">
+				coin: TON
+				<br>network: TON
+			</div>
+			<img src="qr/eqaem-nxcko.svg" alt="QR code" class="qrcode">
+			<div class="copy_address">
+				<textarea readonly class="wallet_address">EQAEmf4FgTykBTRG9bvFl1Qer1fZj89iRjSPCC8eyY5NXCKO</textarea>
+				<div class="address_copied">(Copied)</div>
+			</div>
+		</div>
+		
 		
 		
 		<div class="wallet" id="wallet-id-xmr-bnb">
@@ -454,20 +613,6 @@
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
 				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
-				<div class="address_copied">(Copied)</div>
-			</div>
-		</div>
-		
-		
-		
-		<div class="wallet" id="wallet-id-ton-ton">
-			<div class="coin_name">
-				coin: TON
-				<br>network: TON
-			</div>
-			<img src="qr/eqaem-nxcko.svg" alt="QR code" class="qrcode">
-			<div class="copy_address">
-				<textarea readonly class="wallet_address">EQAEmf4FgTykBTRG9bvFl1Qer1fZj89iRjSPCC8eyY5NXCKO</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -499,6 +644,12 @@
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
+		
+		
+		
+		
+		
+		
 		
 		
 		
