--- a/donate-crypto/index.html
+++ b/donate-crypto/index.html
@@ -292,13 +292,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-trx-tron">
-			<div class="coin_name">
+			<label for="address-id-trx-tron" class="coin_name">
 				coin: TRX
 				<br>network: Tron
-			</div>
+			</label>
+			<br>
 			<img src="qr/tjbwy-9rcbw.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">TJBWYj41pygjd9BiEbuAnWgdbAtg49RcBW</textarea>
+				<textarea id="address-id-trx-tron" readonly class="wallet_address">TJBWYj41pygjd9BiEbuAnWgdbAtg49RcBW</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -306,13 +307,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-bnb-bnb">
-			<div class="coin_name">
+			<label for="address-id-bnb-bnb" class="coin_name">
 				coin: BNB (BEP-20)
 				<br>network: BNB
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-bnb-bnb" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -320,13 +322,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-eth-ethereum">
-			<div class="coin_name">
+			<label for="address-id-eth-ethereum" class="coin_name">
 				coin: ETH (ERC-20)
 				<br>network: Ethereum
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-eth-ethereum" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -334,13 +337,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-eth-arbitrum">
-			<div class="coin_name">
+			<label for="address-id-eth-arbitrum" class="coin_name">
 				coin: ETH (Arbitrum)
 				<br>network: Arbitrum
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-eth-arbitrum" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -348,13 +352,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-eth-optimism">
-			<div class="coin_name">
+			<label for="address-id-eth-optimism" class="coin_name">
 				coin: ETH (Optimism)
 				<br>network: Optimism
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-eth-optimism" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -362,13 +367,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-matic-polygon">
-			<div class="coin_name">
+			<label for="address-id-matic-polygon" class="coin_name">
 				coin: MATIC (Polygon)
 				<br>network: Polygon
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-matic-polygon" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -376,13 +382,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-sol-solana">
-			<div class="coin_name">
+			<label for="address-id-sol-solana" class="coin_name">
 				coin: SOL (Solana)
 				<br>network: Solana
-			</div>
+			</label>
+			<br>
 			<img src="qr/9mdic-dkv59.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">9mDiCpp6XPYHYpiDzVLqk7sfSSPoNHGSDd9jfLCdkV59</textarea>
+				<textarea id="address-id-sol-solana" readonly class="wallet_address">9mDiCpp6XPYHYpiDzVLqk7sfSSPoNHGSDd9jfLCdkV59</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -392,13 +399,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdt-tron">
-			<div class="coin_name">
+			<label for="address-id-usdt-tron" class="coin_name">
 				coin: USDT (TRC-20)
 				<br>network: Tron
-			</div>
+			</label>
+			<br>
 			<img src="qr/tjbwy-9rcbw.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">TJBWYj41pygjd9BiEbuAnWgdbAtg49RcBW</textarea>
+				<textarea id="address-id-usdt-tron" readonly class="wallet_address">TJBWYj41pygjd9BiEbuAnWgdbAtg49RcBW</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -406,13 +414,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdt-bnb">
-			<div class="coin_name">
+			<label for="address-id-usdt-bnb" class="coin_name">
 				coin: USDT (BEP-20)
 				<br>network: BNB
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-usdt-bnb" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -420,13 +429,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdt-ethereum">
-			<div class="coin_name">
+			<label for="address-id-usdt-ethereum" class="coin_name">
 				coin: USDT (ERC-20)
 				<br>network: Ethereum
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-usdt-ethereum" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -434,13 +444,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdt-arbitrum">
-			<div class="coin_name">
+			<label for="address-id-usdt-arbitrum" class="coin_name">
 				coin: USDT (Arbitrum)
 				<br>network: Arbitrum
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-usdt-arbitrum" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -448,13 +459,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdt-optimism">
-			<div class="coin_name">
+			<label for="address-id-usdt-optimism" class="coin_name">
 				coin: USDT (Optimism)
 				<br>network: Optimism
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-usdt-optimism" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -462,13 +474,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdt-polygon">
-			<div class="coin_name">
+			<label for="address-id-usdt-polygon" class="coin_name">
 				coin: USDT (Polygon)
 				<br>network: Polygon
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-usdt-polygon" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -476,13 +489,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdt-solana">
-			<div class="coin_name">
+			<label for="address-id-usdt-solana" class="coin_name">
 				coin: USDT (Solana)
 				<br>network: Solana
-			</div>
+			</label>
+			<br>
 			<img src="qr/9mdic-dkv59.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">9mDiCpp6XPYHYpiDzVLqk7sfSSPoNHGSDd9jfLCdkV59</textarea>
+				<textarea id="address-id-usdt-solana" readonly class="wallet_address">9mDiCpp6XPYHYpiDzVLqk7sfSSPoNHGSDd9jfLCdkV59</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -492,13 +506,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdc-tron">
-			<div class="coin_name">
+			<label for="address-id-usdc-tron" class="coin_name">
 				coin: USDC (TRC-20)
 				<br>network: Tron
-			</div>
+			</label>
+			<br>
 			<img src="qr/tjbwy-9rcbw.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">TJBWYj41pygjd9BiEbuAnWgdbAtg49RcBW</textarea>
+				<textarea id="address-id-usdc-tron" readonly class="wallet_address">TJBWYj41pygjd9BiEbuAnWgdbAtg49RcBW</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -506,13 +521,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdc-bnb">
-			<div class="coin_name">
+			<label for="address-id-usdc-bnb" class="coin_name">
 				coin: USDC (BEP-20)
 				<br>network: BNB
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-usdc-bnb" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -520,13 +536,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdc-ethereum">
-			<div class="coin_name">
+			<label for="address-id-usdc-ethereum" class="coin_name">
 				coin: USDC (ERC-20)
 				<br>network: Ethereum
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-usdc-ethereum" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -534,13 +551,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdc-arbitrum">
-			<div class="coin_name">
+			<label for="address-id-usdc-arbitrum" class="coin_name">
 				coin: USDC (Arbitrum)
 				<br>network: Arbitrum
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-usdc-arbitrum" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -548,13 +566,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdc-optimism">
-			<div class="coin_name">
+			<label for="address-id-usdc-optimism" class="coin_name">
 				coin: USDC (Optimism)
 				<br>network: Optimism
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-usdc-optimism" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -562,13 +581,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdc-polygon">
-			<div class="coin_name">
+			<label for="address-id-usdc-polygon" class="coin_name">
 				coin: USDC (Polygon)
 				<br>network: Polygon
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-usdc-polygon" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -576,13 +596,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-usdc-solana">
-			<div class="coin_name">
+			<label for="address-id-usdc-solana" class="coin_name">
 				coin: USDC (Solana)
 				<br>network: Solana
-			</div>
+			</label>
+			<br>
 			<img src="qr/9mdic-dkv59.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">9mDiCpp6XPYHYpiDzVLqk7sfSSPoNHGSDd9jfLCdkV59</textarea>
+				<textarea id="address-id-usdc-solana" readonly class="wallet_address">9mDiCpp6XPYHYpiDzVLqk7sfSSPoNHGSDd9jfLCdkV59</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -592,13 +613,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-ton-ton">
-			<div class="coin_name">
+			<label for="address-id-ton-ton" class="coin_name">
 				coin: TON
 				<br>network: TON
-			</div>
+			</label>
+			<br>
 			<img src="qr/eqaem-nxcko.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">EQAEmf4FgTykBTRG9bvFl1Qer1fZj89iRjSPCC8eyY5NXCKO</textarea>
+				<textarea id="address-id-ton-ton" readonly class="wallet_address">EQAEmf4FgTykBTRG9bvFl1Qer1fZj89iRjSPCC8eyY5NXCKO</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -606,13 +628,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-xmr-bnb">
-			<div class="coin_name">
+			<label for="address-id-xmr-bnb" class="coin_name">
 				coin: XMR (BEP-20)
 				<br>network: BNB
-			</div>
+			</label>
+			<br>
 			<img src="qr/0x6bb-99dc9.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
+				<textarea id="address-id-xmr-bnb" readonly class="wallet_address">0x6Bb095111A0D9f4125a1CDC1ea5a0902fE699Dc9</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -620,13 +643,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-btc-bitcoin">
-			<div class="coin_name">
+			<label for="address-id-btc-bitcoin" class="coin_name">
 				coin: BTC
 				<br>network: Bitcoin
-			</div>
+			</label>
+			<br>
 			<img src="qr/1pnfs-ekona.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">1PnFSqrKrNbem5JuZK9sVit535FSiEKoNA</textarea>
+				<textarea id="address-id-btc-bitcoin" readonly class="wallet_address">1PnFSqrKrNbem5JuZK9sVit535FSiEKoNA</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
@@ -634,13 +658,14 @@
 		
 		
 		<div class="wallet" id="wallet-id-ltc-litecoin">
-			<div class="coin_name">
+			<label for="address-id-ltc-litecoin" class="coin_name">
 				coin: LTC
 				<br>network: Litecoin
-			</div>
+			</label>
+			<br>
 			<img src="qr/ltc1q-674zn.svg" alt="QR code" class="qrcode">
 			<div class="copy_address">
-				<textarea readonly class="wallet_address">ltc1qqv5ysg4mz4z4mx0kq0nm54pedq0fefk6z674zn</textarea>
+				<textarea id="address-id-ltc-litecoin" readonly class="wallet_address">ltc1qqv5ysg4mz4z4mx0kq0nm54pedq0fefk6z674zn</textarea>
 				<div class="address_copied">(Copied)</div>
 			</div>
 		</div>
